tests/spec/fail/http_request_bad_method.aja
import (
    "http"
)

print(http.request("get", "https://example.com"))
